[gd_scene load_steps=19 format=2]

[ext_resource path="res://Recursos/Players/bunny2_ready.png" type="Texture" id=1]
[ext_resource path="res://Juego/personaje/Saltarina.gd" type="Script" id=2]
[ext_resource path="res://Recursos/Players/bunny2_stand.png" type="Texture" id=3]
[ext_resource path="res://Recursos/Players/bunny2_walk2.png" type="Texture" id=4]
[ext_resource path="res://Recursos/Players/bunny2_jump.png" type="Texture" id=5]
[ext_resource path="res://Recursos/Players/bunny2_walk1.png" type="Texture" id=6]
[ext_resource path="res://Recursos/sfx/Jump.wav" type="AudioStream" id=7]
[ext_resource path="res://Recursos/Items/wing_right.png" type="Texture" id=8]
[ext_resource path="res://Recursos/Items/wing_left.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 4 ) ],
"loop": true,
"name": "Correr",
"speed": 9.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Saltar",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
} ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 42.0
height = 58.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 42, 6 )

[sub_resource type="Animation" id=7]
resource_name = "Aclarar"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("WingLeft:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WingRight:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
resource_name = "Oscurecer"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "Volar"
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("WingLeft:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.65, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 20.0, 0.0, -60.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WingRight:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.65, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -20.0, 0.0, 60.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WingLeft:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("WingRight:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "entrar_portal"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Saltarina" type="KinematicBody2D" groups=["player"]]
scale = Vector2( 0.5, 0.5 )
z_index = 1000
z_as_relative = false
collision_layer = 2
collision_mask = 61
script = ExtResource( 2 )

[node name="WingLeft" type="Sprite" parent="."]
visible = false
position = Vector2( -30, -98 )
texture = ExtResource( 9 )
offset = Vector2( -40, -14 )

[node name="WingRight" type="Sprite" parent="."]
visible = false
position = Vector2( 32, -98 )
texture = ExtResource( 8 )
offset = Vector2( 38, -14 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -96 )
texture = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -72 )
frames = SubResource( 2 )
animation = "idle"
offset = Vector2( 0, -28 )

[node name="CollisionBody" type="CollisionShape2D" parent="."]
position = Vector2( 0, -71 )
shape = SubResource( 1 )

[node name="CollisionFoot" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6 )
shape = SubResource( 3 )

[node name="AudioSalto" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -7.682
pitch_scale = 1.05
bus = "SFX"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -504 )
current = true
zoom = Vector2( 1.6, 1.6 )
limit_top = -2900
limit_bottom = 2900
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.21
drag_margin_right = 0.1

[node name="EnfriamientoPowerUpSalto" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Aclarar = SubResource( 7 )
anims/Default = SubResource( 5 )
anims/Oscurecer = SubResource( 8 )
anims/RESET = SubResource( 9 )
anims/Volar = SubResource( 4 )
anims/entrar_portal = SubResource( 6 )

[node name="EnfriamientoPowerUpVolar" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[connection signal="timeout" from="EnfriamientoPowerUpSalto" to="." method="_on_EnfriamientoPowerUp_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="EnfriamientoPowerUpVolar" to="." method="_on_EnfriamientoPowerUpVolar_timeout"]
